--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.3.0
   json_annotation: ^4.9.0
   logging: ^1.3.0
+  flutter_secure_storage: ^9.2.4
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  qr_flutter: ^4.1.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,9 @@ dev_dependencies:
 
   json_serializable: ^6.9.3
   build_runner: ^2.4.14
+  riverpod_generator: ^2.6.4
+  custom_lint: ^0.7.2
+  riverpod_lint: ^2.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
