--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   qr_flutter: ^4.1.0
   url_launcher: ^6.3.1
+  collection: ^1.19.0
 
 dev_dependencies:
   flutter_test:
