--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   qr_flutter: ^4.1.0
   url_launcher: ^6.3.1
   collection: ^1.19.0
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
