--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   url_launcher: ^6.3.1
   collection: ^1.19.0
   crypto: ^3.0.6
+  scroll_animator: ^0.3.0
+  skeletonizer: ^1.4.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
